// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders Tabs properly 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="seperator"
    >
      <button
        class="tab"
      >
        Like 1
      </button>
    </div>
    <div
      class="seperator"
    >
      <button
        class="tab"
      >
        Comment 1
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs renders not render unwanted child 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="seperator"
    >
      <button
        class="tab"
      >
        Like 1
      </button>
    </div>
  </div>
</div>
`;
